# QT_OpenProject

./: CMakeLists.txt  GlobalTools.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp  moveFile.sh  res.qrc
.qtcreator/: CMakeLists.txt.user.5d5bced
configuration/: config.ini
doc/: 杂项.md
doc/.obsidian/: workspace.json
resources/: WBLIU.rc
src/DataStruct/: HighAltitudeDataSturct.cpp  HighAltitudeDataSturct.h
src/NetWorkModule/: LocalTCPClient.cpp  LocalTCPClient.h  LocalTCPServer.cpp  LocalTCPServer.h  NetWorkAssistant.cpp  NetWorkAssistant.h
src/ProtocolModule/: GB26875ServerProtoco1.cpp  GB26875ServerProtoco1.h
src/RemoteFireProtectionModule/: FireAlarmDevice.cpp  FireAlarmDevice.h  FireAlarmDevice.ui
src/Tools/: ConfigManager.cpp  ConfigManager.h  FileHelper.cpp  FileHelper.h  GlobalTools.cpp  GlobalTools.h  JsonHelper.cpp  JsonHelper.h
src/Widgets/: CastsWeather.cpp  CastsWeather.h  CastsWeather.ui  Configuration.cpp  Configuration.h  Configuration.ui  GB26875ClientMode.cpp  GB26875ClientMode.h  GB26875ClientMode.ui  GB26875ServerMode.cpp  GB26875ServerMode.h  GB26875ServerMode.ui
